--- a/.github/workflows/codeQL-analysis.yml
+++ b/.github/workflows/codeQL-analysis.yml
@@ -13,8 +13,8 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ main ]
   schedule:
-    # Runs at 16:30 UTC on Sun (Every Monday at AM 01:30 JST, my time)
-    #- cron: '30 16 * * SUN'
+    # Runs at 16:30 UTC on day-of-month 1 (Every day-of-month 1 at AM 01:30 JST, my time)
+    - cron: '30 16 * * SUN'
 
 jobs:
   analyze:
