--- a/.github/docker-compose.yml
+++ b/.github/docker-compose.yml
@@ -1,8 +1,31 @@
-# Docker Compose file for testing on multiple Go versions.
-# Run the below from the root of the repo:
+# =============================================================================
+# Docker Compose file for testing on Go versions 1.14~1.17 and latest.
+# =============================================================================
+# It is recommended to run specifying a specific Go version and not at once.
+#
+# Since the service `tidy` will update/re-write the "go.mod" file to the latest
+# version, during it's process the "go.mod" file will be gone temporarily. Thus,
+# it will cause failure in the other container becaue of missing "go.mod" file.
+#
+# Recommended usage:
+#   docker-compose --file ./.github/docker-compose.yml up tidy && \
+#   docker-compose --file ./.github/docker-compose.yml up 1.14
+#
+# Not recommended but to run all tests at once:
 #   docker-compose --file ./.github/docker-compose.yml up
 version: "3.9"
 services:
+  # Service tidy updates the go.mod to the latest
+  tidy:
+    build:
+      context: ..
+      dockerfile: ./.github/Dockerfile
+      args:
+        VARIANT: 1.14-alpine
+    volumes:
+      - ..:/workspaces
+    entrypoint: [ "./.github/go-mod-tidy.sh" ]
+  # Service v1_14 runs the tests on Go v1.14
   v1_14:
     build:
       context: ..
@@ -11,6 +34,7 @@ services:
         VARIANT: 1.14-alpine
     volumes:
       - ..:/workspaces
+  # Service v1_14 runs the tests on Go v1.15
   v1_15:
     build:
       context: ..
@@ -19,6 +43,7 @@ services:
         VARIANT: 1.15-alpine
     volumes:
       - ..:/workspaces
+  # Service v1_14 runs the tests on Go v1.15
   v1_16:
     build:
       context: ..
@@ -27,6 +52,7 @@ services:
         VARIANT: 1.16-alpine
     volumes:
       - ..:/workspaces
+  # Service v1_14 runs the tests on Go v1.16
   v1_17:
     build:
       context: ..
@@ -35,6 +61,7 @@ services:
         VARIANT: 1.17-alpine
     volumes:
       - ..:/workspaces
+  # Service v1_14 runs the tests on latest Go docker image
   latest:
     build:
       context: ..
