--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -1,3 +1,5 @@
+# This workflow runs the unit test (`go test ./...`) on vaious platforms,
+# such as: Linux, macOS and Windows.
 name: UnitTests
 
 on:
