--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -6,8 +6,10 @@ pull_request_rules:
       - title~=^Changes
       - files=go.mod
       - files=go.sum
-      - check-success=analysis
-      - check-success=[container-scan] keinos/vscode-dev-container-go-test
+      - "#files=2"
+      - check-success=Codecov
+      - check-success=CodeQL
+      - check-success=UnitTests
     actions:
       merge:
         method: merge
