--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -10,7 +10,8 @@ on:
     branches: [ main ]
   schedule:
     # Runs at 16:40 UTC on day-of-month 1 (Every day-of-month 1 at AM 01:40 JST, my time)
-    - cron: '40 16 * * SUN'
+    # See: https://crontab.guru/
+    - cron: '40 16 1 * *'
 
 jobs:
   build:
