--- a/.github/workflows/codeQL-analysis.yml
+++ b/.github/workflows/codeQL-analysis.yml
@@ -14,7 +14,8 @@ on:
     branches: [ main ]
   schedule:
     # Runs at 16:30 UTC on day-of-month 1 (Every day-of-month 1 at AM 01:30 JST, my time)
-    - cron: '30 16 * * SUN'
+    # See: https://crontab.guru/
+    - cron: '30 16 1 * *'
 
 jobs:
   analyze:
