--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -16,4 +16,4 @@ RUN apk add --no-cache \
 
 WORKDIR /workspaces
 
-ENTRYPOINT go mod download && go test ./...
+ENTRYPOINT go mod download && go test -race ./...
