--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -10,7 +10,8 @@ on:
     branches: [ main ]
   schedule:
     # Runs at 16:40 UTC on day-of-month 1 (Every day-of-month 1 at AM 01:40 JST, my time)
-    - cron: '40 16 * * SUN'
+    # See: https://crontab.guru/
+    - cron: '40 16 1 * *'
 
 jobs:
   build:
@@ -23,6 +24,6 @@ jobs:
         with:
           go-version: '1.14'
       - name: Run coverage
-        run: go test -race -coverprofile=coverage.out -covermode=atomic ./...
+        run: go test -coverprofile=coverage.out -covermode=atomic ./...
       - name: Upload coverage to Codecov
         run: bash <(curl -s https://codecov.io/bash)
