--- a/.github/workflows/weekly-update.yml
+++ b/.github/workflows/weekly-update.yml
@@ -36,12 +36,12 @@ jobs:
       - name: Update go.mod and run tests
         run: |
           set -eu
-          docker-compose --file ./.github/docker-compose.yml up tidy && \
-          docker-compose --file ./.github/docker-compose.yml up v1_14 && \
-          docker-compose --file ./.github/docker-compose.yml up v1_15 && \
-          docker-compose --file ./.github/docker-compose.yml up v1_16 && \
-          docker-compose --file ./.github/docker-compose.yml up v1_17 && \
-          docker-compose --file ./.github/docker-compose.yml up latest
+          docker-compose --file ./.github/docker-compose.yml run tidy && \
+          docker-compose --file ./.github/docker-compose.yml run v1_14 && \
+          docker-compose --file ./.github/docker-compose.yml run v1_15 && \
+          docker-compose --file ./.github/docker-compose.yml run v1_16 && \
+          docker-compose --file ./.github/docker-compose.yml run v1_17 && \
+          docker-compose --file ./.github/docker-compose.yml run latest
 
       - name: Create Pull Request on Change
         uses: peter-evans/create-pull-request@v3
